--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
-    "@clerk/nextjs": "^4.23.0",
+    "@clerk/nextjs": "^4.26.2",
     "@clerk/themes": "^1.7.5",
     "@hookform/resolvers": "^3.1.1",
     "@pinecone-database/pinecone": "^0.1.6",
@@ -40,12 +40,12 @@
     "eslint-config-next": "13.4.11",
     "langchain": "^0.0.92",
     "lucide-react": "^0.263.0",
-    "next": "13.4.11",
+    "next": "^13.5.4",
     "next-cloudinary": "^4.16.0",
     "next-themes": "^0.2.1",
     "openai": "^3.3.0",
     "openai-edge": "^1.2.2",
-    "postcss": "8.4.27",
+    "postcss": "^8.4.31",
     "query-string": "^8.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
