--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@clerk/themes": "^1.7.5",
     "@hookform/resolvers": "^3.1.1",
     "@pinecone-database/pinecone": "^0.1.6",
-    "@prisma/client": "^5.0.0",
+    "@prisma/client": "^5.7.0",
     "@radix-ui/react-avatar": "^1.0.3",
     "@radix-ui/react-dialog": "^1.0.4",
     "@radix-ui/react-dropdown-menu": "^2.0.5",
@@ -58,10 +58,11 @@
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.6",
     "typescript": "5.1.6",
+    "vercel": "^32.7.2",
     "zod": "^3.21.4",
     "zustand": "^4.3.9"
   },
   "devDependencies": {
-    "prisma": "^5.0.0"
+    "prisma": "^5.7.0"
   }
 }
